--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body class="md-skin fixed-nav no-skin-config">
 <div id="wrapper">
     <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
@@ -52,7 +52,7 @@
                         IN+
                     </div>
                 </li>
-                <li class="active">
+                <li>
                     <a th:href="@{/index}"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
                 </li>
                 <li>
@@ -104,7 +104,7 @@
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
-            <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
+            <nav class="navbar navbar-static-top navbar-fixed-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i>
                     </a>
