完成密码修改功能

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                         </a>
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
                             <li><a href="#" id="person_info">个人信息</a></li>
-                            <li><a href="contacts.html">账号设置</a></li>
+                            <li><a href="#" id="account_config">账号设置</a></li>
                             <li class="divider"></li>
 
                             <li><a th:href="@{/logout}">安全退出</a></li>
