完成子账号的注册和激活

--- a/src/main/resources/templates/account_config.html
+++ b/src/main/resources/templates/account_config.html
@@ -89,10 +89,11 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                     </div>
-                    <div class="ibox-content">
+
+                    <div class="ibox-content" id="sub_account_content">
                         <form id="sub_account_form" class="form-horizontal">
                             <div class="form-group"><label class="col-sm-2 control-label">子账号: </label>
-                                <div class="col-sm-10"><input id="username" type="text" name="username" class="form-control required"></div>
+                                <div class="col-sm-10"><input id="sub_username" type="text" name="sub_username" class="form-control required"></div>
                             </div>
                             <div class="hr-line-dashed"></div>
                             <div class="form-group"><label class="col-sm-2 control-label">密码: </label>
@@ -100,7 +101,7 @@
                             </div>
                             <div class="hr-line-dashed"></div>
                             <div class="form-group"><label class="col-sm-2 control-label">确认密码: </label>
-                                <div class="col-sm-10"><input id="confirm_password" type="password" name="confirm_password" class="form-control required"></div>
+                                <div class="col-sm-10"><input id="re_password" type="password" name="re_password" class="form-control required"></div>
                             </div>
 
 
