--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -232,7 +232,7 @@
 
             </nav>
         </div>
-        <div class="wrapper wrapper-content" id="main_content">
+        <div class="wrapper wrapper-content animated fadeInUp" id="main_content">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="ibox float-e-margins">
