--- a/src/main/resources/templates/account_config.html
+++ b/src/main/resources/templates/account_config.html
@@ -75,6 +75,7 @@
                     </div>
                 </div>
             </div>
+            <shiro:hasRole name="checker">
             <div class="col-lg-6">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
@@ -115,6 +116,7 @@
                     </div>
                 </div>
             </div>
+            </shiro:hasRole>
         </div>
     </div>
 </div>
