--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -41,31 +41,31 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>建筑工程(万元)</label><span style="color:red;"> *</span>
-                                        <input id="civil_engineering" type="text" class="form-control required number" maxlength="15">
+                                        <input id="civil_engineering" name="civil_engineering" type="text" class="form-control required number" maxlength="15">
                                     </div>
 
                                     <div class="form-group">
                                         <label>金属机构设备及安装工程(万元)</label><span style="color:red;"> *</span>
-                                        <input id="metal_mechanism" type="text" class="form-control number" maxlength="15">
+                                        <input id="metal_mechanism" name="metal_mechanism" type="text" class="form-control required number" maxlength="15">
                                     </div>
 
                                     <div class="form-group">
                                         <label>独立费用(万元)</label><span style="color:red;"> *</span>
-                                        <input id="independent_cost"  type="text" class="form-control number" maxlength="15">
+                                        <input id="independent_cost" name="independent_cost" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>机电设备及安装工程(万元)</label><span style="color:red;"> *</span>
-                                        <input id="electromechanical_equipment" type="text" class="form-control number" maxlength="15">
+                                        <input id="electromechanical_equipment" name="electromechanical_equipment" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>施工临时工程(万元)</label><span style="color:red;"> *</span>
-                                        <input id="temporary_work" type="text" class="form-control number" maxlength="15">
+                                        <input id="temporary_work" name="temporary_work" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>基本预备费(万元)</label><span style="color:red;"> *</span>
-                                        <input id="reserve_funds" type="text" class="form-control number" maxlength="15">
+                                        <input id="reserve_funds" name="reserve_funds" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                 </div>
                             </div>
@@ -78,22 +78,22 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>建设征地移民安置补偿费(万元)</label><span style="color:red;"> *</span>
-                                        <input id="resettlement_arrangement" type="text" class="form-control required number" maxlength="15">
+                                        <input id="resettlement_arrangement" name="resettlement_arrangement" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>环境保护工程投资(万元)</label><span style="color:red;"> *</span>
-                                        <input id="environmental_protection" type="text" class="form-control number" maxlength="15">
+                                        <input id="environmental_protection" name="environmental_protection" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>水土保持工程投资(万元)</label><span style="color:red;"> *</span>
-                                        <input id="water_conservation" type="text" class="form-control number" maxlength="15">
+                                        <input id="water_conservation" name="water_conservation" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                      <div class="form-group">
                                         <label>其他(万元)</label>
-                                        <input id="other_cost" type="text" class="form-control number" maxlength="15">
+                                        <input id="other_cost" name="other_cost" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                 </div>
                             </div>
@@ -107,33 +107,33 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>土石方明挖（万/m³）</label><span style="color:red;"> *</span>
-                                        <input id="open_dug" type="text" class="form-control required number" maxlength="15">
+                                        <input id="open_dug" name="open_dug" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>土石方回填（万/m³）</label><span style="color:red;"> *</span>
-                                        <input id="backfill" type="text" class="form-control number " maxlength="15">
+                                        <input id="backfill" name="backfill" type="text" class="form-control required number " maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>混泥土（万/m³）</label><span style="color:red;"> *</span>
-                                        <input id="concrete" type="text" class="form-control number" maxlength="15">
+                                        <input id="concrete" name="concrete" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>灌浆（m或m³）</label><span style="color:red;"> *</span>
-                                        <input id="grout" type="text" class="form-control number" maxlength="15">
+                                        <input id="grout" name="grout" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>土石方洞挖</label><span style="color:red;"> *</span>
-                                        <input id="hole_dug" type="text" class="form-control required number" maxlength="15">
+                                        <input id="hole_dug" name="hole_dug" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>砌石（万/m³）</label><span style="color:red;"> *</span>
-                                        <input id="masonry" type="text" class="form-control number" maxlength="15">
+                                        <input id="masonry" name="masonry" type="text" class="form-control required number" maxlength="15">
                                     </div>
                                     <div class="form-group">
                                         <label>钢筋（t）</label><span style="color:red;"> *</span>
-                                        <input id="rebar" type="text" class="form-control number" maxlength="15">
+                                        <input id="rebar" name="rebar" type="text" class="form-control required number" maxlength="15">
                                     </div>
 
                                 </div>
@@ -152,44 +152,44 @@
                                         <label class="font-normal">填报月份</label>
                                         <div class="input-group date">
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                            <input id="submit_date" type="text" class="form-control" disabled>
+                                            <input id="submit_date" name="submit_date" type="text" class="form-control required" readonly>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>劳动力投入（万工日）</label><span style="color:red;"> *</span>
-                                        <input id="labour_force" type="text" class="form-control number"  maxlength="15">
+                                        <input id="labour_force" name="labour_force" type="text" class="form-control required number"  maxlength="15">
                                     </div>
                                 </div>
                              
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>主要建设内容</label>
-                                        <textarea id="construction_content" class="form-control required" ></textarea>
+                                        <textarea id="construction_content" class="form-control required required" maxlength="250"></textarea>
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group">
                                         <label>存在困难及问题</label>
-                                        <textarea id="difficulty" class="form-control "></textarea>
+                                        <textarea id="difficulty" class="form-control " maxlength="250"></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label>下一步建议</label>
-                                        <textarea id="suggestion" class="form-control "></textarea>
+                                        <textarea id="suggestion" class="form-control " maxlength="250"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                 	<div class="form-group">
                                         <label>工程形象进度及节点工期</label>
-                                        <textarea id="visual_progress" class="form-control required" ></textarea>
+                                        <textarea id="visual_progress" class="form-control required" maxlength="250"></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label>采取的主要措施</label>
-                                        <textarea id="measure" class="form-control "></textarea>
+                                        <textarea id="measure" class="form-control " maxlength="250"></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label>备注</label>
-                                        <textarea id="remark" class="form-control "></textarea>
+                                        <textarea id="remark" class="form-control " maxlength="250"></textarea>
                                     </div>
                                 </div>
                             </div>
