通过重写FormAuthenticationFilter， 解决shiro登录页面跳转指向暂存地址的问题

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,9 +53,7 @@
                         </div>
 
 
-                        <a href="#">
-                            <small>Forgot password?</small>
-                        </a>
+                        <h5 id="msg" th:text="${msg}"></h5>
 
                         <p class="text-muted text-center">
                             <small>Do not have an account?</small>
