--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -22,7 +22,19 @@
 </head>
 
 <body>
-
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-sm-4">
+        <h2>月报新增</h2>
+        <ol class="breadcrumb">
+            <li>
+                <a href="/index">主页</a>
+            </li>
+            <li class="active">
+                <strong>新增项目月报</strong>
+            </li>
+        </ol>
+    </div>
+</div>
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
