--- a/src/main/resources/templates/month_report_show.html
+++ b/src/main/resources/templates/month_report_show.html
@@ -13,6 +13,20 @@
     <link th:href="@{/css/animate.css}" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
 
+    <div class="row wrapper border-bottom white-bg page-heading">
+        <div class="col-sm-4">
+            <h2>Project detail</h2>
+            <ol class="breadcrumb">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="active">
+                    <strong>Project detail</strong>
+                </li>
+            </ol>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-lg-12">
                         <div class="ibox">
