完成部分月报集前端代码

--- a/src/main/resources/templates/project_months.html
+++ b/src/main/resources/templates/project_months.html
@@ -21,32 +21,7 @@
         </div>
     </div>
     <div class="wrapper wrapper-content animated fadeInRight">
-        <div class="row">
-
-            <div class="col-md-3">
-                <div class="ibox">
-                    <div class="ibox-content product-box">
-
-                        <div class="product-imitation">
-                         <!--图-->
-                        </div>
-                        <div class="product-desc">
-                                <span class="product-price">
-                                    12月
-                                </span>
-                            <p class="text-muted">填报人：<strong>小刘</strong></p>
-                            <p class="text-muted">月报审核状态：<span class="label label-primary">已完成</span></p>
-                            <div class="col-sm-offset-9 m-t text-righ">
-
-                                <a href="#" class="btn btn-xs btn-outline btn-primary">详情 <i class="fa fa-long-arrow-right"></i> </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
+        <div class="row" id="projectMonthsDiv"></div>
     </div>
 
 <!-- Mainly scripts -->
