--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
                     </a>
                     <form role="search" class="navbar-form-custom" action="search_results.html">
                         <div class="form-group">
-                            <input type="text" placeholder="Search for something..." class="form-control"
+                            <input type="text" placeholder="搜索..." class="form-control"
                                    name="top-search" id="top-search">
                         </div>
                     </form>
