--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -310,7 +310,7 @@
                                         <div class="col-lg-1">
 
                                             <a id="next_month" class="btn btn-info btn-facebook btn-outline animation_select" data-animation="bounceInRight">
-                                                <i class="fa fa-angle-double-right"> </i> 下一月
+                                                 下一月 <i class="fa fa-angle-double-right"> </i>
                                             </a>
 
                                         </div>
@@ -367,10 +367,10 @@
                                                     <li class=""><a data-toggle="tab" href="#tab-2"> <i class="fa fa-wrench"></i>工程量情况</a></li>
                                                     <li class=""><a data-toggle="tab" href="#tab-3"> <i class="fa fa-book"></i>项目情况</a></li>
                                                     <li class=""><a data-toggle="tab" href="#tab-4"> <i class="fa fa-file-text"></i>附件</a></li>
-                                                    <li class=""><a data-toggle="modal" data-target="#data_table_modal"> <i class="fa fa-pie-chart"></i>表格生成</a></li>
+                                                    <li class=""><a data-toggle="modal" data-target="#data_table_modal"> <i class="fa fa-pie-chart"></i>月报表</a></li>
                                                 </ul>
                                                 <div class="tab-content" th:object="${projectMonthlyReportShowVO}">
-                                                    <div id="tab-1" class="tab-pane active">
+                                                    <div id="tab-1" class="tab-pane active animated fadeInUp">
                                                         <div class="panel-body">
                                                             <fieldset class="form-horizontal">
                                                                 <div class="col-lg-6">
@@ -454,7 +454,7 @@
 
                                                         </div>
                                                     </div>
-                                                    <div id="tab-2" class="tab-pane">
+                                                    <div id="tab-2" class="tab-pane animated fadeInUp">
                                                         <div class="panel-body">
                                                             <fieldset class="form-horizontal">
                                                                 <div class="col-lg-12">
@@ -517,7 +517,7 @@
 
                                                         </div>
                                                     </div>
-                                                    <div id="tab-3" class="tab-pane">
+                                                    <div id="tab-3" class="tab-pane animated fadeInUp">
                                                         <div class="panel-body">
                                                             <div class="col-lg-12">
                                                                 <div class="ibox">
@@ -604,7 +604,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div id="tab-4" class="tab-pane" th:object="${projectMonthlyReportShowVO}">
+                                                    <div id="tab-4" class="tab-pane animated fadeInUp" th:object="${projectMonthlyReportShowVO}">
                                                         <div class="panel-body">
                                                             <div class="col-lg-12">
                                                                 <div class="ibox">
@@ -631,12 +631,9 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-
                                                                     </div>
                                                                 </div>
                                                             </div>
-
-
                                                         </div>
                                                     </div>
                                                 </div>
